--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-FRONTEND_URL = https://chat-app-client-tan.vercel.app
+FRONTEND_URL = http://localhost:3000
 MONGODB_URI = mongodb+srv://totuyencv:admin123@chat-app.nlhrgt6.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
 JWT_SECRET_KEY = 'adddddafffffffffffff'
